eip.tf
resource "aws_eip" "user18_nat_1a" {
  vpc = true
}

resource "aws_eip" "user18_nat_1c" {
  vpc = true
}
